--- a/.github/workflows/mainflow.yml
+++ b/.github/workflows/mainflow.yml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main  # Change if your default branch is different
-  pull_request:
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -19,17 +21,11 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: '3.x'
-
-      - name: Install MkDocs and dependencies
-        run: |
-          pip install mkdocs mkdocs-material
-
-      - name: Build MkDocs site
-        run: |
-          mkdocs build --clean
-
-      - name: Upload build artifact for Vercel (optional)
-        uses: actions/upload-artifact@v4
+      - uses: actions/cache@v3
         with:
-          name: mkdocs-site
-          path: site
+          key: ${{ github.ref }}
+          path: .cache
+      - run: pip install mkdocs-awesome-pages-plugin
+      - run: pip install mkdocs-material 
+      - run: pip install mkdocs-git-revision-date-localized-plugin
+      - run: mkdocs gh-deploy --force
