--- a/.github/workflows/mainflow.yml
+++ b/.github/workflows/mainflow.yml
@@ -24,7 +24,8 @@ jobs:
         with:
           key: ${{ github.ref }}
           path: .cache
+      - run: pip install mkdocs
+      - run: pip install mkdocs-material
       - run: pip install mkdocs-awesome-pages-plugin
-      - run: pip install mkdocs-material 
       - run: pip install mkdocs-git-revision-date-localized-plugin
       - run: mkdocs gh-deploy --force
