--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: ChatBot.com API Docs by Athr Kharal, PhD
+site_name: ChatBot.com API Docs - developed by **Athr Kharal, PhD**
 site_description: Developer guide for ChatBot API — integration, endpoints, examples.
 site_author: Athar Kharal, PhD
 site_url: https://atharkharal.github.io/chatbot-api-docs/
