--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,6 +71,7 @@ markdown_extensions:
 
 plugins:
   - search
+  - mike
   - awesome-pages
   - git-revision-date-localized:
       enable_creation_date: true
